[package]
name = "render"
version = "0.1.0"
authors = ["SeniorMars <cjh16@rice.edu>"]
edition = "2021"

[lib]
name = "render"
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.2.2", features = ["test", "neovim-0-8"] }
serde = { version = '1.0', features = ["derive"] }
anyhow = "1"
base64 = "0.13"
tempfile = "3.1"

[dev-dependencies]
image = "0.24"
