[package]
name = "render"
version = "0.1.0"
authors = ["SeniorMars <seniormars@rice.edu>"]
edition = "2021"

[lib]
name = "render"
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5.1", features = ["neovim-nightly", "test", "libuv"] }
regex = "1.10.2"
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1"
base64 = "0.13"
tempfile = "3.1"
# magick_rust = "0.19.1"

[dev-dependencies]
image = "0.24"
